<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@android:drawable/btn_star_big_on"
        android:orderInCategory="20"
        android:title="@string/menu_favorite"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="20"
        android:title="@string/menu_delete"/>

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:orderInCategory="200"
        android:title="@string/menu_about"/>
</menu>