<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_attach"
        android:icon="@drawable/ic_action_attach"
        android:orderInCategory="15"
        android:title="@string/menu_download"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="19"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_checkbox"
        android:icon="@android:drawable/checkbox_on_background"
        android:orderInCategory="10"
        android:title="@string/menu_checkbox"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/menu_edit"
        android:orderInCategory="10"
        app:showAsAction="always"
        android:icon="@mipmap/ic_edit"/>

</menu>